--- a/Week2/Examples/Example06_RecyclerView/app/src/main/res/values/strings.xml
+++ b/Week2/Examples/Example06_RecyclerView/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Example06_RecyclerView</string>
+    <string name="error_text">Что-то пошло не так. Попробуйте еще раз</string>
 </resources>
